--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -26,7 +26,7 @@
                     android:layout_width="60px"
                     android:layout_height="60px"
                     android:layout_centerHorizontal="true"
-                    android:transitionName="express"
+                    android:transitionName="@string/transition_name"
                     android:layout_gravity="center"
                     android:visibility="invisible"
                     />
