--- a/app/src/main/res/layout/activity_id.xml
+++ b/app/src/main/res/layout/activity_id.xml
@@ -1,117 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:tools="http://schemas.android.com/tools"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-        android:orientation="vertical">
-        <RelativeLayout
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="15dp"
+    >
+
+    <net.runningcode.view.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:hint="@string/card_info"
+        >
+    </net.runningcode.view.SearchView>
+
+    <RelativeLayout
+        android:id="@+id/v_result_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_view"
+        android:background="@color/btn_gray"
+        android:orientation="horizontal"
+        android:paddingBottom="25dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="30dp"
+        android:paddingTop="25dp"
+        android:visibility="gone"
+        >
+
+        <ImageView
+            android:id="@+id/v_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+
+            />
+
+        <TextView
+            android:id="@+id/v_birthday"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="30px"
-            android:paddingLeft="30px"
-            >
-            <EditText
-                android:id="@+id/v_id_no"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="64px"
-                android:paddingLeft="10px"
-                android:background="@null"
-                android:drawablePadding="3dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:inputType="textVisiblePassword"
-                android:hint="请输入身份证号码"
-                android:imeOptions="actionSearch"
-                />
-            <ImageView android:id="@+id/v_clear"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_marginTop="5px"
-                       android:layout_marginRight="24px"
-                       android:src="@drawable/icon_clear"
-                       android:layout_toLeftOf="@+id/view"
-                       android:visibility="gone"
-                />
-            <View
-                android:id="@+id/view"
-                android:layout_width="1px"
-                android:layout_height="30px"
-                android:layout_marginRight="24px"
-                android:layout_marginTop="5px"
-                android:layout_toLeftOf="@+id/v_query"
-                android:background="#cdccd1"
-                android:visibility="gone"/>
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/v_icon"
+            android:paddingLeft="15dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            tools:text="1111111111"
+            />
 
-            <ImageView android:id="@+id/v_query"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_alignParentRight="true"
-                       android:layout_alignParentTop="true"
-                       android:layout_marginRight="30px"
-                       android:layout_marginTop="5px"
-                       android:src="@drawable/icon_query_green"/>
-            <RelativeLayout android:id="@+id/v_result_panel"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/v_id_no"
-                            android:paddingTop="50px"
-                            android:paddingBottom="50px"
-                            android:paddingLeft="20px"
-                            android:paddingRight="60px"
-                            android:orientation="horizontal"
-                            android:background="@color/btn_gray"
-            >
-                <ImageView android:id="@+id/v_icon"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_alignParentLeft="true"
+        <TextView
+            android:id="@+id/v_constellation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/v_birthday"
+            android:layout_toRightOf="@id/v_icon"
+            android:paddingLeft="15dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:visibility="gone"
+            tools:text="天蝎座"
+            />
 
-                    />
-                <TextView
-                    android:id="@+id/v_birthday"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/v_icon"
-                    android:textSize="40px"
-                    android:paddingLeft="30px"
-                    android:textColor="@color/black"
-                    tools:text="1111111111"
-                    />
-                <TextView
-                    android:id="@+id/v_constellation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/v_icon"
-                    android:layout_below="@id/v_birthday"
-                    android:textSize="40px"
-                    android:paddingLeft="30px"
-                    android:textColor="@color/black"
-                    tools:text="天蝎座"
-                    android:visibility="gone"
-                    />
-                <TextView
-                    android:id="@+id/v_zodiac"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/v_constellation"
-                    android:layout_below="@id/v_birthday"
-                    android:textSize="40px"
-                    android:paddingLeft="100px"
-                    android:textColor="@color/black"
-                    tools:text="生肖：牛"
-                    />
-                <TextView
-                    android:id="@+id/v_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/v_icon"
-                    android:layout_below="@id/v_zodiac"
-                    android:textSize="50px"
-                    android:paddingLeft="30px"
-                    android:paddingTop="30px"
-                    android:textColor="@color/black"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/v_zodiac"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/v_birthday"
+            android:layout_toRightOf="@id/v_constellation"
+            android:paddingLeft="50dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            tools:text="生肖：牛"
+            />
+
+        <TextView
+            android:id="@+id/v_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/v_zodiac"
+            android:layout_toRightOf="@id/v_icon"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            />
+    </RelativeLayout>
+</RelativeLayout>
