--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -1,135 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
     >
-    <!--<include layout="@layout/toolbar"/>-->
-    <RelativeLayout android:id="@+id/v_content"
+    <RelativeLayout
+        android:id="@+id/v_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/bg_gray"
         >
-    <FrameLayout android:id="@+id/v_weather_panel"
-             android:layout_width="match_parent"
-             android:layout_height="300px">
-        <ImageView
-            android:id="@+id/v_weather_bg"
+
+        <FrameLayout
+            android:id="@+id/v_weather_panel"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/icon_sunny_bg"
-            android:scaleType="fitXY"
-            />
-        <View
+            android:layout_height="150dp">
+
+            <ImageView
+                android:id="@+id/v_weather_bg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_sunny_bg"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.38"
+                android:background="@android:color/black"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="9dp"
+                android:paddingLeft="13dp"
+                android:paddingRight="12dp"
+                android:paddingTop="17dp"
+                >
+
+                <ImageView
+                    android:id="@+id/v_weather_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:src="@drawable/icon_sunshine"/>
+
+                <TextView
+                    android:id="@+id/v_temperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/v_weather_icon"
+                    android:layout_toEndOf="@+id/v_weather_icon"
+                    android:layout_toRightOf="@+id/v_weather_icon"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="36sp"
+                    android:textStyle="bold"
+                    tools:text="20~30"
+                    />
+
+
+                <TextView
+                    android:id="@+id/v_notice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp"
+                    tools:text="不畏浮云遮望眼"
+                    />
+
+                <TextView
+                    android:id="@+id/v_air"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    tools:text="空气优(25)"
+                    />
+
+                <TextView
+                    android:id="@+id/v_ws"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/v_weather_icon"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    tools:text="微风"
+                    />
+
+                <View
+                    android:id="@+id/v_plit"
+                    android:layout_width="1dp"
+                    android:layout_height="10dp"
+                    android:layout_alignBottom="@+id/v_ws"
+                    android:layout_alignTop="@+id/v_ws"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_toRightOf="@+id/v_ws"
+                    android:background="@android:color/white"/>
+
+                <TextView
+                    android:id="@+id/v_weather_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/v_ws"
+                    android:layout_toEndOf="@+id/v_plit"
+                    android:layout_toRightOf="@+id/v_plit"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="14dp"
+                    tools:text="晴"
+                    />
+
+                <TextView
+                    android:id="@+id/v_city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center"
+                    android:paddingLeft="5dp"
+                    android:text="定位中"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/v_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="16dp"
+                    tools:text="04/01 星期五"/>
+            </RelativeLayout>
+        </FrameLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/v_table"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/black"
-            android:alpha="0.38"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="18px"
-            android:paddingTop="34px"
-            android:paddingLeft="26px"
-            android:paddingRight="24px"
-            >
-            <ImageView android:id="@+id/v_weather_icon"
-                       android:layout_width="100px"
-                       android:layout_height="100px"
-                       android:src="@drawable/icon_sunshine"
-                       android:layout_alignParentLeft="true"
-                       android:layout_alignParentTop="true"/>
-            <TextView android:id="@+id/v_temperature"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:paddingTop="20px"
-                      android:paddingLeft="20px"
-                      android:textStyle="bold"
-                      android:textSize="72px"
-                      tools:text="20~30"
-                      android:textColor="@android:color/white"
-                      android:layout_toRightOf="@+id/v_weather_icon"
-                      android:layout_toEndOf="@+id/v_weather_icon"
-                      android:layout_alignBaseline="@+id/v_weather_icon"
-                />
-            <TextView android:id="@+id/v_air"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:paddingTop="20px"
-                      android:paddingLeft="20px"
-                      android:textSize="32px"
-                      tools:text="空气优(25)"
-                      android:layout_alignParentRight="true"
-                      android:layout_centerInParent="true"
-                      android:textColor="@android:color/white"
-                />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/v_weather_panel"
+            android:layout_marginTop="15dp"
+            android:animateLayoutChanges="true">
 
-            <TextView android:id="@+id/v_ws"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_below="@+id/v_weather_icon"
-                      android:padding="10px"
-                      android:gravity="center"
-                      tools:text="微风"
-                      android:textColor="@android:color/white"
-                      android:textSize="28px"
-                />
-            <View android:id="@+id/v_plit"
-                  android:layout_width="1dp"
-                  android:layout_height="20px"
-                  android:layout_marginTop="8dp"
-                  android:layout_marginBottom="8dp"
-                  android:layout_toRightOf="@+id/v_ws"
-                  android:layout_alignBottom="@+id/v_ws"
-                  android:layout_alignTop="@+id/v_ws"
-                  android:background="@android:color/white"/>
-            <TextView android:id="@+id/v_weather_text"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_alignBottom="@+id/v_ws"
-                      android:layout_toRightOf="@+id/v_plit"
-                      android:layout_toEndOf="@+id/v_plit"
-                      android:padding="10px"
-                      android:gravity="center"
-                      android:textColor="@android:color/white"
-                      android:textSize="28px"
-                      tools:text="晴"
-                />
+        </android.support.v7.widget.RecyclerView>
 
-            <TextView android:id="@+id/v_city"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_alignParentBottom="true"
-                      android:gravity="center"
-                      android:paddingLeft="10px"
-                      android:textColor="@android:color/white"
-                      android:textSize="32px"
-                      android:text="定位中"
-                />
-            <TextView android:id="@+id/v_date"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:gravity="center"
-                      android:textColor="@android:color/white"
-                      android:layout_alignParentBottom="true"
-                      android:layout_alignParentRight="true"
-                      android:layout_alignParentEnd="true"
-                      tools:text="04/01 星期五"
-                      android:textSize="32px"/>
-        </RelativeLayout>
-</FrameLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/v_table"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="30px"
-              android:animateLayoutChanges="true"
-              android:layout_below="@+id/v_weather_panel">
-
-    </android.support.v7.widget.RecyclerView>
-
-</RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
 
