--- a/app/src/main/res/layout/activity_lottery.xml
+++ b/app/src/main/res/layout/activity_lottery.xml
@@ -1,52 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-        >
+              android:orientation="vertical"
+    >
 
-    <RadioGroup android:id="@+id/v_radio_group"
+    <RadioGroup
+        android:id="@+id/v_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="30px"
-        android:paddingRight="30px"
-        android:layout_marginTop="30px"
-        android:orientation="horizontal">
-        <Button android:id="@+id/v_ssq"
-                     style="@style/LotteryRadio"
-                     android:text="@string/lottery_ssq"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
+
+        <Button
+            android:id="@+id/v_ssq"
+            style="@style/LotteryRadio"
+            android:text="@string/lottery_ssq"
             />
-        <Button android:id="@+id/v_dlt"
-                     style="@style/LotteryRadio"
-                     android:background="@color/btn_warn"
-                     android:text="@string/lottery_dlt"/>
-        <Button android:id="@+id/v_fc3d"
-                     style="@style/LotteryRadio"
-                     android:background="@color/btn_info"
-                     android:text="@string/lottery_fc3d"/>
+
+        <Button
+            android:id="@+id/v_dlt"
+            style="@style/LotteryRadio"
+            android:background="@color/btn_warn"
+            android:text="@string/lottery_dlt"/>
+
+        <Button
+            android:id="@+id/v_fc3d"
+            style="@style/LotteryRadio"
+            android:background="@color/btn_info"
+            android:text="@string/lottery_fc3d"/>
     </RadioGroup>
 
-    <TextView android:id="@+id/v_result_lable"
+    <TextView
+        android:id="@+id/v_result_lable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50px"
-        android:paddingTop="30px"
-        android:paddingBottom="30px"
+        android:layout_marginTop="25dp"
         android:gravity="center"
-        android:textSize="35px"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:textSize="18sp"
         />
 
 
-    <LinearLayout android:id="@+id/v_result"
+    <LinearLayout
+        android:id="@+id/v_result"
         android:layout_width="match_parent"
-        android:layout_height="150px"
-        android:orientation="horizontal"
+        android:layout_height="75dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:gravity="center"
-        android:padding="20px"
-        android:layout_marginLeft="30px"
-        android:layout_marginRight="30px"
+        android:orientation="horizontal"
+        android:padding="10dp"
         >
     </LinearLayout>
 </LinearLayout>
