--- a/app/src/main/res/layout/activity_num2str.xml
+++ b/app/src/main/res/layout/activity_num2str.xml
@@ -1,67 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/reveal_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fff"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="15dp"
+    >
 
-    <RelativeLayout android:id="@+id/reveal_root"
+    <net.runningcode.view.SearchView
+        android:id="@+id/v_searchview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30px"
-        android:paddingLeft="30px"
-        android:orientation="horizontal">
+        app:hint="输入数字，立即转换成大写"
+        app:input_type="number"
+        />
 
-        <EditText android:id="@+id/v_no"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="24px"
-            android:hint="输入数字，立即转换成大写"
-            android:gravity="center_vertical"
-            android:textColor="@color/colorPrimaryGreen"
-            android:textSize="28px"
-            android:paddingLeft="10px"
-            android:background="@null"
-            android:drawablePadding="5dp"
-            android:textCursorDrawable="@null"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:inputType="numberSigned"
-            android:maxLength="20"
-            />
-        <ImageView android:id="@+id/v_clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="24px"
-            android:src="@drawable/icon_clear"
-            android:layout_alignParentRight="true"
-            android:visibility="gone"
-            />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/v_result"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/v_main_result"
+        style="@style/ResultPanel"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10px"
-        android:layout_marginRight="10px"
-        android:paddingLeft="32px"
-        android:paddingTop="34px"
-        android:paddingBottom="34px"
-        android:layout_marginTop="24px"
-        android:background="@color/bg_gray"
-        android:orientation="vertical"
-        android:visibility="gone"
-        >
-        <TextView android:id="@+id/v_main_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10px"
-            android:textIsSelectable="true"
-            android:textColor="@color/colorPrimaryGreen"
-            android:textSize="42px"
-            />
-
-    </RelativeLayout>
+        android:padding="5dp"
+        android:textColor="@color/colorPrimaryGreen"
+        android:textIsSelectable="true"
+        android:textSize="21dp"
+        />
 </LinearLayout>
+
