--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -1,98 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="15dp"
+    >
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical">
+    <net.runningcode.view.SearchView
+        android:id="@+id/v_searchview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:hint="请输入手机号码"
+        app:input_type="number"
+        />
 
-        <RelativeLayout
+    <RelativeLayout
+        android:id="@+id/v_result_panel"
+        style="@style/ResultPanel"
+        android:layout_below="@id/v_searchview">
+
+        <ImageView
+            android:id="@+id/v_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            />
+
+        <TextView
+            android:id="@+id/v_phone_no"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="30px"
-            android:paddingLeft="30px"
-            >
-            <EditText
-                android:id="@+id/v_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="64px"
-                android:paddingLeft="10px"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:inputType="phone"
-                android:background="@null"
-                android:drawablePadding="3dp"
-                android:hint="请输入手机号"
-                android:imeOptions="actionSearch"
-                />
-            <ImageView android:id="@+id/v_clear"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_marginTop="5px"
-                       android:layout_marginRight="24px"
-                       android:src="@drawable/icon_clear"
-                       android:layout_toLeftOf="@+id/view"
-                       android:visibility="gone"
-                />
-            <View
-                android:id="@+id/view"
-                android:layout_width="1px"
-                android:layout_height="30px"
-                android:layout_marginTop="5px"
-                android:layout_marginRight="24px"
-                android:layout_toLeftOf="@+id/v_query"
-                android:background="#cdccd1"
-                android:visibility="gone"/>
-            <ImageView android:id="@+id/v_query"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_alignParentRight="true"
-                       android:layout_alignParentTop="true"
-                       android:layout_marginRight="30px"
-                       android:layout_marginTop="5px"
-                       android:src="@drawable/icon_query_green"/>
-            <RelativeLayout android:id="@+id/v_result_panel"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/v_phone"
-                            android:paddingTop="50px"
-                            android:paddingBottom="50px"
-                            android:paddingLeft="20px"
-                            android:paddingRight="60px"
-                            android:orientation="horizontal"
-                            android:background="@color/btn_gray"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/v_icon"
+            android:paddingLeft="15dp"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            />
 
-                >
-                <ImageView android:id="@+id/v_icon"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_alignParentLeft="true"
-                    />
-                <TextView
-                    android:id="@+id/v_phone_no"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/v_icon"
-                    android:textSize="50px"
-                    android:paddingLeft="30px"
-                    android:textColor="@color/black"
+        <TextView
+            android:id="@+id/v_phone_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/v_phone_no"
+            android:layout_toRightOf="@id/v_icon"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            />
 
-                    />
-                <TextView
-                    android:id="@+id/v_phone_result"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/v_icon"
-                    android:layout_below="@id/v_phone_no"
-                    android:textSize="40px"
-                    android:paddingLeft="30px"
-                    android:paddingTop="30px"
-                    android:textColor="@color/black"
-
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/v_phone_zip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/v_phone_result"
+            android:layout_toRightOf="@id/v_icon"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            />
+    </RelativeLayout>
+</RelativeLayout>
 
