--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -1,103 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fff"
-    android:orientation="vertical" >
 
-    <RelativeLayout android:id="@+id/reveal_root"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/reveal_root"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#fff"
+                android:padding="15dp"
+    >
+
+    <net.runningcode.view.SearchView
+        android:id="@+id/v_searchview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="45px"
-        android:orientation="horizontal">
-        <ImageView android:id="@+id/v_scan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="58px"
-            android:src="@drawable/icon_scan"
-                   android:visibility="gone"
-            />
-        <EditText android:id="@+id/v_no"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="24px"
-            android:hint="输入文字，立即翻译（仅支持英汉互译）"
-            android:gravity="center_vertical"
-            android:textColor="@color/colorPrimaryGreen"
-            android:textSize="28px"
-                  android:background="@null"
-                  android:drawablePadding="3dp"
-            android:textCursorDrawable="@null"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/v_scan"
-            android:layout_toLeftOf="@+id/v_query"
-            android:layout_marginLeft="22px"
-            android:inputType="textAutoComplete"
-            android:imeOptions="actionSearch"
-            />
-        <ImageView android:id="@+id/v_clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="24px"
-            android:src="@drawable/icon_clear"
-            android:layout_toLeftOf="@+id/view"
-            android:visibility="gone"
-            />
-        <View
-            android:id="@+id/view"
-            android:layout_width="1px"
-            android:layout_height="30px"
-            android:layout_marginRight="24px"
-            android:layout_toLeftOf="@+id/v_query"
-            android:background="#cdccd1"
-            android:visibility="gone"/>
-        <ImageView android:id="@+id/v_query"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="60px"
-            android:src="@drawable/icon_query_green"
-            android:layout_alignBottom="@+id/v_clear"
-            android:layout_alignParentRight="true"
-             />
-    </RelativeLayout>
+        app:hint="输入文字，立即翻译（仅支持英汉互译）"
+        />
 
     <RelativeLayout
         android:id="@+id/v_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10px"
-        android:layout_marginRight="10px"
-        android:paddingLeft="32px"
-        android:paddingTop="34px"
-        android:paddingBottom="34px"
-        android:layout_marginTop="24px"
-        android:background="@color/bg_gray"
-        android:orientation="vertical"
-        android:visibility="gone"
+        style="@style/ResultPanel"
+        android:layout_below="@+id/v_searchview"
+        tools:visibility="visible"
         >
-        <TextView android:id="@+id/v_main_result"
+
+        <TextView
+            android:id="@+id/v_main_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="10px"
-            android:textIsSelectable="true"
+            android:paddingRight="5dp"
             android:textColor="@color/colorPrimaryGreen"
-            android:textSize="42px"
+            android:textIsSelectable="true"
+            android:textSize="21dp"
+            tools:text="今天吃什么"
             />
-        <ImageView android:id="@+id/v_play"
-            android:layout_width="40px"
-            android:layout_height="40px"
-                   android:paddingTop="8px"
+
+        <ImageView
+            android:id="@+id/v_play"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="4dp"
             android:layout_toRightOf="@id/v_main_result"
             android:src="@drawable/icon_play"
             />
-        <TextView android:id="@+id/v_translate_result"
-                  android:layout_below="@+id/v_main_result"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:textIsSelectable="true"
-                  android:textColor="@color/black"
-                  android:textSize="36px"
+
+        <TextView
+            android:id="@+id/v_translate_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/v_main_result"
+            android:textColor="@color/black"
+            android:textIsSelectable="true"
+            android:textSize="18sp"
             />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
+
