--- a/app/src/main/res/layout/item_item_ad.xml
+++ b/app/src/main/res/layout/item_item_ad.xml
@@ -5,35 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    app:mrl_rippleOverlay="true"
-    app:mrl_rippleColor="@color/black">
+    app:mrl_rippleColor="@color/black"
+    app:mrl_rippleOverlay="true">
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:paddingTop="20px"
-        android:paddingBottom="18px"
+        android:orientation="vertical"
+        android:paddingBottom="9dp"
+        android:paddingTop="10dp"
+
         >
+
         <FrameLayout
             android:id="@+id/v_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
-            <ImageView android:id="@+id/v_icon"
-                       android:layout_gravity="center"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:src="@drawable/icon_express"/>
+
+            <ImageView
+                android:id="@+id/v_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/icon_express"/>
         </FrameLayout>
 
         <TextView
             android:id="@+id/v_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="24px"
-            android:textSize="24px"
+            android:paddingTop="8dp"
+            android:text="快递查询"
             android:textColor="@color/text_gray"
-            android:text="快递查询"/>
+            android:textSize="12sp"/>
     </LinearLayout>
 </com.balysv.materialripple.MaterialRippleLayout>
