--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -28,12 +28,16 @@
   <item type="id" name="return_scan_result"/>
   <item type="id" name="search_book_contents_failed"/>
   <item type="id" name="search_book_contents_succeeded"/>
-  
-  
-  
+
+
+
   <item type="id" name="gridview" />
   <item type="id" name="webview" />
-  
+
   <item type="id" name="about_version_code">false</item>
   <item type="id" name="split">false</item>
+
+  <item type="id" name="statusbarutil_fake_status_bar_view" />
+  <item type="id" name="statusbarutil_translucent_view" />
+
 </resources>
